# project_watt_cubed

./: .gitignore  Cargo.toml  README.md  flake.nix
.serena/: project.yml
documentation/: IDEA.md  features.md  philosophy.md
src/: app.rs  command.rs  console.rs  game.rs  interact.rs  lib.rs  macros.rs  main.rs  menu.rs  player.rs  render.rs  save.rs
src/block/: composition.rs  derive.rs  element.rs  mod.rs  reaction.rs  registry.rs
src/input/: look.rs  mod.rs  movement.rs
src/keys/: mod.rs  movement.rs
src/math/: mod.rs
src/mods/: inventory.rs  mod.rs
src/net/: client.rs  mod.rs  protocol.rs  server.rs
src/sim/: electrical.rs  mod.rs  thermal.rs
src/world/: chunk.rs  generation.rs  mesh.rs  mod.rs  voxel.rs
